--- a/css/styles.css
+++ b/css/styles.css
@@ -1,34 +1,22 @@
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-
-
-/**********************************/
-
-
-/* 0. Variáveis
+    *,
+    *::before,
+    *::after {
+        box-sizing: border-box;
+    }
+    /**********************************/
+    /* 0. Variáveis
 /* 1. Tags/
 /**********************************/
-
-
-/**********************************/
-
-
-/* 2. Body
+    /**********************************/
+    /* 2. Body
 /* 3. Game
 /*   3.1 Pads
 /*   3.2 Center
 /*      3.2.1 GUI
 /* 4. Footer
 /**********************************/
-
-
-/**********************************/
-
-
-/* Color Guide:
+    /**********************************/
+    /* Color Guide:
 /* 
 /* #00A74A : normal-green
 /* #9F0F17 : normal-red
@@ -43,323 +31,372 @@
 /* #32050C : counter-color
 /*
 /**********************************/
-
-
+    /**********************************/
+    /* 0. Variáveis
 /**********************************/
-
-
-/* 0. Variáveis
+    
+     :root {
+        --clr-normal-green: #00A74A;
+        --clr-normal-red: #9F0F17;
+        --clr-normal-yellow: #CCA707;
+        --clr-normal-blue: #094A8F;
+        --clr-light-green: #13ff7c;
+        --clr-light-red: #ff4c4c;
+        --clr-light-yellow: #fed93f;
+        --clr-light-blue: #1c8cff;
+        --clr-border: #333333;
+        --clr-center: #ECE7EE;
+        --clr-counter-bg: #32050C;
+        --clr-counter-off: #430710;
+        --clr-counter-on: #DC0D29;
+        --clr-switch: #3193DE;
+        --game-size: 48rem;
+        --game-border: 1.5rem solid var(--clr-border);
+    }
+    /**********************************/
+    /* 1. Tags
 /**********************************/
-
-:root {
-    --clr-normal-green: #00A74A;
-    --clr-normal-red: #9F0F17;
-    --clr-normal-yellow: #CCA707;
-    --clr-normal-blue: #094A8F;
-    --clr-light-green: #13ff7c;
-    --clr-light-red: #ff4c4c;
-    --clr-light-yellow: #fed93f;
-    --clr-light-blue: #1c8cff;
-    --clr-border: #333333;
-    --clr-center: #ECE7EE;
-    --clr-counter-bg: #32050C;
-    --clr-counter-off: #430710;
-    --clr-counter-on: #DC0D29;
-    --clr-switch: #3193DE;
-    --game-size: 48rem;
-    --game-border: 1.5rem solid var(--clr-border);
-}
-
-
+    
+    html {
+        font-size: 3rem;
+        zoom: 20%;
+        overflow: hidden
+    }
+    
+    body {
+        zoom: 120%;
+        background-image: url('http://cdn.backgroundhost.com/backgrounds/subtlepatterns/retina_wood.png');
+        font-family: "bungee";
+    }
+    /**********************************/
+    /* 2. Body
 /**********************************/
-
-
-/* 1. Tags
+    
+    .container {
+        width: var(--game-size);
+        margin-left: auto;
+        margin-right: auto;
+    }
+    /**********************************/
+    /* 3. Game
 /**********************************/
-
-html {
-    font-size: 3rem;
-    zoom: 23%;
-}
-
-body {
-    zoom: 120%;
-    background-image: url('http://cdn.backgroundhost.com/backgrounds/subtlepatterns/retina_wood.png');
-    font-family: "bungee";
-}
-
-
+    
+    .game {
+        width: var(--game-size);
+        height: var(--game-size);
+        display: flex;
+        flex-wrap: wrap;
+        position: relative;
+    }
+    
+    .game__title {
+        font-size: 3.5rem;
+        text-transform: uppercase;
+        margin: 0;
+        padding-left: 3rem;
+        padding-top: 4rem;
+    }
+    
+    .reg {
+        font-family: Verdana, sans-serif;
+        font-size: 1rem;
+        margin-left: -1rem;
+        vertical-align: top;
+    }
+    /**********************************/
+    /* 3.1 Pads
 /**********************************/
-
-
-/* 2. Body
+    
+    .game__pad {
+        width: calc(var(--game-size)/ 2);
+        height: calc(var(--game-size)/ 2);
+        border: 1.5rem solid #222;
+    }
+    
+    .game__pad--tl {
+        background-color: var(--clr-normal-green);
+        border-top-left-radius: 100%;
+    }
+    
+    .game__pad--tr {
+        background-color: var(--clr-normal-red);
+        border-top-right-radius: 100%;
+    }
+    
+    .game__pad--bl {
+        background-color: var(--clr-normal-yellow);
+        border-bottom-left-radius: 100%;
+    }
+    
+    .game__pad--br {
+        background-color: var(--clr-normal-blue);
+        border-bottom-right-radius: 100%;
+    }
+    
+    .game__pad--tl.game__pad--active {
+        background-color: var(--clr-light-green);
+    }
+    
+    .game__pad--tr.game__pad--active {
+        background-color: var(--clr-light-red);
+    }
+    
+    .game__pad--bl.game__pad--active {
+        background-color: var(--clr-light-yellow);
+    }
+    
+    .game__pad--br.game__pad--active {
+        background-color: var(--clr-light-blue);
+    }
+    
+    .game__pad--btn {
+        cursor: pointer;
+    }
+    /**********************************/
+    /* 3.2 Center
 /**********************************/
-
-.container {
-    width: var(--game-size);
-    margin-left: auto;
-    margin-right: auto;
-}
-
-
+    
+    .game__options {
+        position: absolute;
+        background-color: white;
+        /**/
+        width: calc(var(--game-size)/2);
+        height: calc(var(--game-size)/2);
+        /**/
+        top: calc(var(--game-size)/4);
+        left: calc(var(--game-size)/4);
+        /**/
+        border: var(--game-border);
+        border-radius: 25rem;
+    }
+    /**********************************/
+    /* 3.2.1 GUI
 /**********************************/
-
-
-/* 3. Game
+    
+    .gui {
+        padding-left: 1.5rem;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: flex-end;
+    }
+    
+    .group {
+        margin-right: 2.2rem;
+    }
+    
+    .group-large {
+        display: flex;
+        width: 10rem;
+        margin-left: 4.5rem;
+    }
+    
+    .gui__label {
+        font-family: "Arima Modurai", cursive;
+        font-weight: bold;
+        font-size: 0.75rem;
+        text-align: center;
+        text-transform: uppercase;
+    }
+    
+    .gui__label--switch {
+        margin: 0;
+        padding-top: 0.75rem;
+    }
+    
+    .gui__btn {
+        border-radius: 5rem;
+        width: 2.5rem;
+        height: 2.5rem;
+        margin-left: .2rem;
+        box-shadow: 0 .2rem .3rem #222;
+        border: .3rem solid #222;
+        cursor: pointer;
+    }
+    
+    .gui__btn:active {
+        transform: translate(0, .3rem);
+        box-shadow: none;
+    }
+    
+    .gui__btn--start {
+        background-color: red;
+    }
+    
+    .gui__btn--strict {
+        background-color: yellow;
+    }
+    
+    .gui__btn--switch {
+        background-color: #222;
+        margin-left: .5rem;
+        margin-right: .5rem;
+        height: 2.3rem;
+        width: 5rem;
+        border-radius: .3rem;
+        cursor: pointer;
+    }
+    
+    .gui__btn--switch::before {
+        content: "";
+        background-color: var(--clr-switch);
+        display: block;
+        position: relative;
+        left: 2rem;
+        top: -.2rem;
+        width: 2.5rem;
+        height: 1.9rem;
+        border-radius: .3rem;
+        border: .3rem solid #333;
+    }
+    
+    .gui__btn--switch-on::before {
+        left: 0;
+    }
+    
+    .gui__counter {
+        background-color: var(--clr-counter-bg);
+        color: var(--clr-counter-off);
+        font-family: "iceland", cursive;
+        font-weight: bold;
+        font-size: 3rem;
+        text-align: right;
+        width: 5.5rem;
+        border: .3rem solid #000;
+        border-radius: 1rem;
+        padding-right: .2rem;
+        padding-left: .3rem;
+    }
+    
+    .gui__counter--on {
+        color: var(--clr-counter-on);
+    }
+    
+    .gui__led {
+        background-color: #32050c;
+        margin-left: 1rem;
+        margin-bottom: .5rem;
+        width: .8rem;
+        height: .8rem;
+        border: .2rem solid #222;
+        border-radius: 2rem;
+    }
+    
+    .gui__led-active {
+        background-color: red;
+    }
+    /**********************************/
+    /* 4. Footer
 /**********************************/
-
-.game {
-    width: var(--game-size);
-    height: var(--game-size);
-    display: flex;
-    flex-wrap: wrap;
-    position: relative;
-}
-
-.game__title {
-    font-size: 3.5rem;
-    text-transform: uppercase;
-    margin: 0;
-    padding-left: 3rem;
-    padding-top: 4rem;
-}
-
-.reg {
-    font-family: Verdana, sans-serif;
-    font-size: 1rem;
-    margin-left: -1rem;
-    vertical-align: top;
-}
-
-
-/**********************************/
-
-
-/* 3.1 Pads
-/**********************************/
-
-.game__pad {
-    width: calc(var(--game-size)/ 2);
-    height: calc(var(--game-size)/ 2);
-    border: 1.5rem solid #222;
-}
-
-.game__pad--tl {
-    background-color: var(--clr-normal-green);
-    border-top-left-radius: 100%;
-}
-
-.game__pad--tr {
-    background-color: var(--clr-normal-red);
-    border-top-right-radius: 100%;
-}
-
-.game__pad--bl {
-    background-color: var(--clr-normal-yellow);
-    border-bottom-left-radius: 100%;
-}
-
-.game__pad--br {
-    background-color: var(--clr-normal-blue);
-    border-bottom-right-radius: 100%;
-}
-
-.game__pad--tl.game__pad--active {
-    background-color: var(--clr-light-green);
-}
-
-.game__pad--tr.game__pad--active {
-    background-color: var(--clr-light-red);
-}
-
-.game__pad--bl.game__pad--active {
-    background-color: var(--clr-light-yellow);
-}
-
-.game__pad--br.game__pad--active {
-    background-color: var(--clr-light-blue);
-}
-
-.game__pad--btn {
-    cursor: pointer;
-}
-
-
-/**********************************/
-
-
-/* 3.2 Center
-/**********************************/
-
-.game__options {
-    position: absolute;
-    background-color: white;
-    /**/
-    width: calc(var(--game-size)/2);
-    height: calc(var(--game-size)/2);
-    /**/
-    top: calc(var(--game-size)/4);
-    left: calc(var(--game-size)/4);
-    /**/
-    border: var(--game-border);
-    border-radius: 25rem;
-}
-
-
-/**********************************/
-
-
-/* 3.2.1 GUI
-/**********************************/
-
-.gui {
-    padding-left: 1.5rem;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-end;
-}
-
-.group {
-    margin-right: 2.2rem;
-}
-
-.group-large {
-    display: flex;
-    width: 10rem;
-    margin-left: 4.5rem;
-}
-
-.gui__label {
-    font-family: "Arima Modurai", cursive;
-    font-weight: bold;
-    font-size: 0.75rem;
-    text-align: center;
-    text-transform: uppercase;
-}
-
-.gui__label--switch {
-    margin: 0;
-    padding-top: 0.75rem;
-}
-
-.gui__btn {
-    border-radius: 5rem;
-    width: 2.5rem;
-    height: 2.5rem;
-    margin-left: .2rem;
-    box-shadow: 0 .2rem .3rem #222;
-    border: .3rem solid #222;
-    cursor: pointer;
-}
-
-.gui__btn:active {
-    transform: translate(0, .3rem);
-    box-shadow: none;
-}
-
-.gui__btn--start {
-    background-color: red;
-}
-
-.gui__btn--strict {
-    background-color: yellow;
-}
-
-.gui__btn--switch {
-    background-color: #222;
-    margin-left: .5rem;
-    margin-right: .5rem;
-    height: 2.3rem;
-    width: 5rem;
-    border-radius: .3rem;
-    cursor: pointer;
-}
-
-.gui__btn--switch::before {
-    content: "";
-    background-color: var(--clr-switch);
-    display: block;
-    position: relative;
-    left: 2rem;
-    top: -.2rem;
-    width: 2.5rem;
-    height: 1.9rem;
-    border-radius: .3rem;
-    border: .3rem solid #333;
-}
-
-.gui__btn--switch-on::before {
-    left: 0;
-}
-
-.gui__counter {
-    background-color: var(--clr-counter-bg);
-    color: var(--clr-counter-off);
-    font-family: "iceland", cursive;
-    font-weight: bold;
-    font-size: 3rem;
-    text-align: right;
-    width: 5.5rem;
-    border: .3rem solid #000;
-    border-radius: 1rem;
-    padding-right: .2rem;
-    padding-left: .3rem;
-}
-
-.gui__counter--on {
-    color: var(--clr-counter-on);
-}
-
-.gui__led {
-    background-color: #32050c;
-    margin-left: 1rem;
-    margin-bottom: .5rem;
-    width: .8rem;
-    height: .8rem;
-    border: .2rem solid #222;
-    border-radius: 2rem;
-}
-
-.gui__led-active {
-    background-color: red;
-}
-
-
-/**********************************/
-
-
-/* 4. Footer
-/**********************************/
-
-footer {
-    height: 5rem;
-    text-align: center;
-    margin-top: 6.5rem;
-    font-size: 2rem;
-    background-color: black;
-    color: white;
-    padding-top: 1.5rem;
-}
-
-a {
-    text-decoration: none;
-    color: white;
-}
-
-a:link {
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
-
-/* 4. header
+    
+    footer {
+        height: 5rem;
+        text-align: center;
+        margin-top: 8.5rem;
+        font-size: 2rem;
+        background-color: black;
+        color: white;
+        padding-top: 1.5rem;
+    }
+    
+    a {
+        text-decoration: none;
+        color: white;
+    }
+    
+    a:link {
+        text-decoration: none;
+    }
+    
+    a:hover {
+        text-decoration: underline;
+    }
+    /* 4. header
 /**********/
-
-.div__header {
-    height: 4.2rem;
-    background-color: black;
-    margin-bottom: 2rem;
-}
+    
+    .div__header {
+        height: 4.2rem;
+        background-color: black;
+        margin-bottom: 2rem;
+    }
+    
+    @media (max-width: 460px) {
+        .game {
+            width: 100%;
+            height: 60%;
+            display: flex;
+            flex-wrap: wrap;
+            position: fixed;
+            margin: 0;
+            padding: 0;
+            top: 24%;
+        }
+        html,
+        body {
+            height: 100%;
+            overflow: hidden
+        }
+        footer {
+            bottom: 0;
+            position: fixed;
+            width: 100%;
+            text-align: center;
+            height: 15%;
+            padding: 5%;
+        }
+        .game__pad--tl,
+        .game__pad--tr,
+        .game__pad--bl,
+        .game__pad--br {
+            border-radius: 1;
+            height: 50%;
+            margin: 0;
+            padding: 0;
+            width: 50%;
+            border: 0.5rem solid #222;
+        }
+        .game__options {
+            position: fixed;
+            top: 0%;
+            left: 0%;
+            zoom: 100%;
+            border-radius: 0%;
+            width: 100%;
+            height: 23%;
+            border: 1.5rem solid #222;
+            /* posiciona na metade da tela */
+            /* e retrocede metade da altura */
+        }
+        .group {
+            margin-top: 1%;
+            margin-left: 2%;
+        }
+        .group-large {
+            zoom: 130%;
+            position: absolute;
+            left: 62%;
+            top: 50%;
+        }
+        .game__title {
+            margin-top: -10%;
+            margin-left: -5%;
+        }
+        .div__header {
+            height: 12rem;
+        }
+        .gui__btn--strict,
+        .gui__btn--start {
+            zoom: 150%;
+            position: absolute;
+            top: 50%;
+        }
+        .gui__label {
+            zoom: 110%;
+            position: relative;
+        }
+        .gui__led {
+            position: absolute;
+            top: 38%;
+            left: 50%;
+            zoom: 120%;
+        }
+    }
