--- a/css/styles.css
+++ b/css/styles.css
@@ -362,11 +362,12 @@
             border-radius: 0%;
             width: 100%;
             height: 23%;
-            border: 1.5rem solid #222;
+            border: 1rem solid #222;
             /* posiciona na metade da tela */
             /* e retrocede metade da altura */
         }
         .group {
+            padding-top: 3%;
             margin-top: 1%;
             margin-left: 2%;
         }
@@ -396,7 +397,7 @@
         .gui__led {
             position: absolute;
             top: 38%;
-            left: 50%;
+            left: 48.5%;
             zoom: 120%;
         }
     }
