--- a/css/styles.css
+++ b/css/styles.css
@@ -362,12 +362,12 @@
             border-radius: 0%;
             width: 100%;
             height: 23%;
-            border: 1rem solid #222;
+            border: 25px solid #222;
             /* posiciona na metade da tela */
             /* e retrocede metade da altura */
         }
         .group {
-            padding-top: 3%;
+            padding-top: 5%;
             margin-top: 1%;
             margin-left: 2%;
         }
